twitter icon misalignment fixed

--- a/app/stylesheets/partials/anon-banner.scss
+++ b/app/stylesheets/partials/anon-banner.scss
@@ -118,7 +118,7 @@
 	@include x-logged-out-networks-buttons($twitter-blue);
 	&:before{
 		background-image: url($icon-share-twitter-on);
-		background-position: 3px 5px;
+		background-position: center center;
 		background-size: 97%;
 	}
 }
